# mini-vibe-coding-prj

./: .env.example  .gitignore  ARCHITECTURE.md  EXECUTION_PLAN.md  FILES_TO_CREATE.md  README.md  REQUIREMENT.md  SETUP_PLAN.md  claude.md  pyproject.toml  run_agent.py
docker/: build-test-runner.ps1
docker/test-runner/: Dockerfile
docs/: DEEPAGENTS_DESIGN.md  DOC_SYNC_DESIGN.md  FILESYSTEM_DESIGN.md  LANGSMITH_GUIDE.md  SELF_HEALING_DESIGN.md
examples/: basic_chat.py  code_generation.py  deep_agent_demo.py  doc_sync_demo.py  filesystem_demo.py  mode_branching_demo.py  self_healing_demo.py
src/ai_assistant/: __init__.py  agent.py  analyzers.py  config.py  deep_agent.py  deep_agent_core.py  doc_sync.py  filesystem_tools.py  healing.py  logging_config.py  planner.py  prompts.py  subagents.py  tools.py  utils.py
temp/: large_file_demo.py  test_demo.py
tests/: __init__.py  test_agent.py
workspace/: config_impact_analysis.md
workspace/demo/: final_report.md  task_1_result.txt  task_3_result.txt  task_4_result.txt  task_5_result.txt
